Building navbar and footer

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Homepage.</h1>
-<%= link_to "Tech-blog", articles_path %>
+<div class="center jumbotron">
+  <h1>TECH BLOG</h1>
+  <p><%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg" %></p>
+</div>
